--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -14,4 +14,5 @@ services:
         class: Publero\FrameworkBundle\Manager\BaseManager
         calls:
             - [ setDoctrine, [ "@doctrine" ] ]
+            - [ setEventDispatcher, [ "@event_dispatcher" ] ]
         abstract: true
